--- a/hardware/Makefile
+++ b/hardware/Makefile
@@ -1,10 +1,10 @@
 TARGET := hardware.a
 
-SRCS := processor.cpp memory.cpp eflags.cpp
+SRCS := processor.cpp memory.cpp eflags.cpp io.cpp
 OBJS := $(SRCS:.cpp=.o)
 DEPS := $(SRCS:.cpp=.d)
 
-CXXFLAGS := -Wall -MMD -I../include
+CXXFLAGS := -Wall -MMD -std=c++11 -I../include
 
 all: $(TARGET)
 
