--- a/device/Makefile
+++ b/device/Makefile
@@ -1,11 +1,11 @@
 TARGET := device.a
 
 #SRCS := com.cpp syscontrol.cpp vram.cpp display.cpp
-SRCS := com.cpp syscontrol.cpp vram.cpp
+SRCS := com.cpp syscontrol.cpp vram.cpp picreg.cpp pit.cpp
 OBJS := $(SRCS:.cpp=.o)
 DEPS := $(SRCS:.cpp=.d)
 
-CXXFLAGS := -Wall -MMD -I../include
+CXXFLAGS := -Wall -MMD -std=c++11 -I../include
 
 all: $(TARGET)
 
