--- a/device/Makefile
+++ b/device/Makefile
@@ -1,7 +1,7 @@
 TARGET := device.a
 
 #SRCS := com.cpp syscontrol.cpp vram.cpp display.cpp
-SRCS := com.cpp syscontrol.cpp vram.cpp picreg.cpp pit.cpp
+SRCS := com.cpp syscontrol.cpp vram.cpp picreg.cpp pit.cpp fdd.cpp
 OBJS := $(SRCS:.cpp=.o)
 DEPS := $(SRCS:.cpp=.d)
 
