Display, UI (keyboard and mouse interrupt)

--- a/device/Makefile
+++ b/device/Makefile
@@ -1,7 +1,6 @@
 TARGET := device.a
 
-#SRCS := com.cpp syscontrol.cpp vram.cpp display.cpp
-SRCS := com.cpp syscontrol.cpp vram.cpp picreg.cpp pit.cpp fdd.cpp
+SRCS := com.cpp syscontrol.cpp vram.cpp picreg.cpp pit.cpp fdd.cpp display.cpp keyboard.cpp mouse.cpp
 OBJS := $(SRCS:.cpp=.o)
 DEPS := $(SRCS:.cpp=.d)
 
