--- a/bios/Makefile
+++ b/bios/Makefile
@@ -3,7 +3,7 @@ OBJS	= startup.o bios.o functions.o service.o disk.o vga.o video.o
 
 CC 	:= gcc
 AS 	:= nasm
-CFLAGS	+= -nostdlib -fno-asynchronous-unwind-tables -g -fno-stack-protector -m16
+CFLAGS	+= -masm=intel -nostdlib -fno-asynchronous-unwind-tables -g -fno-stack-protector -m16
 LDFLAGS	+= --entry=start --oformat=binary -Ttext 0x0 -melf_i386
 
 all :
