--- a/device/Makefile
+++ b/device/Makefile
@@ -1,11 +1,12 @@
 TARGET := device.a
 
-SRCS := com.cpp syscontrol.cpp vram.cpp pic.cpp pit.cpp fdd.cpp vga.cpp keyboard.cpp mouse.cpp
+SRCS := com.cpp syscontrol.cpp pic.cpp pit.cpp fdd.cpp vga.cpp keyboard.cpp mouse.cpp
 OBJS := $(SRCS:.cpp=.o)
 DEPS := $(SRCS:.cpp=.d)
 
 CXXFLAGS := -Wall -MMD -std=c++11 -I../include
 
+.PHONY: all
 all: $(TARGET)
 
 -include $(DEPS)
@@ -13,5 +14,6 @@ all: $(TARGET)
 $(TARGET): $(OBJS)
 	$(AR) rcs $@ $^
 
+.PHONY: clean
 clean:
 	$(RM) $(DEPS) $(OBJS) $(TARGET)
